fix numeric badge alignment

--- a/src/scss/7-components/_article.scss
+++ b/src/scss/7-components/_article.scss
@@ -39,7 +39,7 @@
     &-header {
       position:relative; display:flex; flex-wrap:wrap; align-items:center; gap:pxToRem(16);
       .#{$p}-numeric-badge {
-        margin-block-start:pxToRem(16);
+        
         @media #{$break2open} { position:absolute; transform:translateX(calc(calc(-100% - pxToRem(16) ) * var(--transform-direction) )); }
       }
     }
